Revert "Merge pull request #5133 from sourcegraph/jw/changes-styling"
This reverts commit 5512b16e05793eced952e6d9715932d438c6c28a, reversing
changes made to 25019c59baa250700909a55b239407bf2e522309.

--- a/ui/web_modules/sourcegraph/workbench/styles/searchViewlet.css
+++ b/ui/web_modules/sourcegraph/workbench/styles/searchViewlet.css
@@ -42,7 +42,7 @@
 	border-radius: 2px;
 	margin: 1rem;
 	padding: 0.5rem;
-	width: calc(100% - 32px) !important;
+	width: 268px !important;
 }
 
 :global .search-viewlet .search-widget .monaco-findInput input {
