Use offset and lengths to count limit like VSCode (#5196)
* Use offset and lengths to count limit like VSCode

* Show limit hit warning in frontend

* Respond to review

* Truncate returns new value

--- a/ui/web_modules/sourcegraph/workbench/styles/searchViewlet.css
+++ b/ui/web_modules/sourcegraph/workbench/styles/searchViewlet.css
@@ -138,3 +138,7 @@
 :global .search-viewlet .message p {
 	padding: 12px 0 !important;
 }
+
+:global .vs-dark .monaco-inputbox-container .monaco-inputbox-message.warning {
+	color: white !important;
+}
