use same title delimiter as vscode ui launcher code

--- a/cmd/frontend/internal/app/templates/head_from_meta.html
+++ b/cmd/frontend/internal/app/templates/head_from_meta.html
@@ -1,5 +1,5 @@
 {{define "HeadFromMeta"}}
-<title>{{with .Meta.Title}}{{.}} · {{end}}Sourcegraph</title>
+<title>{{with .Meta.Title}}{{.}} - {{end}}Sourcegraph</title>
 
 {{/* Common to all pages */}}
 <meta name="twitter:site" content="@srcgraph">
