chrome-ext: add optional permissions to authorize access to custom Sourcegraph URLs

--- a/client/browser-ext/chrome/views/options.jade
+++ b/client/browser-ext/chrome/views/options.jade
@@ -4,7 +4,9 @@ html
   head
     title Sourcegraph extension
   body
-    form
+    form#sourcegraph_url_form
       label Sourcegraph URL: 
       input#sourcegraph_url
+      &nbsp;
+      input(type="submit", value="Save")
     script(src=env == 'prod' ? '/js/options.bundle.js' : 'https://localhost:3000/js/options.bundle.js')
