chrome-ext: more options text

--- a/client/browser-ext/chrome/views/options.jade
+++ b/client/browser-ext/chrome/views/options.jade
@@ -4,8 +4,11 @@ html
   head
     title Sourcegraph extension
   body
+    h3 Advanced options
+    p Warning: changing these options may break your Chrome extension.
     form#sourcegraph_url_form
-      label Sourcegraph URL: 
+      label Sourcegraph URL:
+      &nbsp;
       input#sourcegraph_url
       &nbsp;
       input(type="submit", value="Save")
