browser-ext: fix dev build

--- a/client/browser-ext/chrome/views/inject.jade
+++ b/client/browser-ext/chrome/views/inject.jade
@@ -10,4 +10,4 @@ html
       }
   body
     #root
-    script(src=env == 'prod' ? '/js/inject.bundle.js' : 'https://localhost:3000/js/inject.bundle.js')
+    script('/js/inject.bundle.js')
