--- a/client/browser-ext/chrome/views/options.jade
+++ b/client/browser-ext/chrome/views/options.jade
@@ -12,4 +12,4 @@ html
       input(type="submit", value="Save")
     label Enable Search:
     input(type="checkbox", id="sourcegraph-enable-search")
-    script(src=env == 'prod' ? '/js/options.bundle.js' : 'https://localhost:3000/js/options.bundle.js')
+    script('/js/options.bundle.js')
