--- a/client/browser-ext/chrome/views/background.jade
+++ b/client/browser-ext/chrome/views/background.jade
@@ -2,4 +2,4 @@ doctype html
 
 html
   head
-    script(src=env == 'prod' ? '/js/background.bundle.js' : 'https://localhost:3000/js/background.bundle.js')
+    script('/js/background.bundle.js')
