--- a/client/browser-ext/chrome/assets/css/highlight.css
+++ b/client/browser-ext/chrome/assets/css/highlight.css
@@ -9,12 +9,12 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
   overflow-x: auto;
   padding: 0.5em;
   color: #333;
-  background: #f8f8f8;
+  background: #fafbfc;
 }
 
 .hljs-comment,
 .hljs-quote {
-  color: #998;
+  color: rgb(106, 115, 125);
   font-style: italic;
 }
 
@@ -41,7 +41,7 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
 .hljs-title,
 .hljs-section,
 .hljs-selector-id {
-  color: #900;
+  color: rgb(215, 58, 73);
   font-weight: bold;
 }
 
@@ -51,7 +51,7 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
 
 .hljs-type,
 .hljs-class .hljs-title {
-  color: #458;
+  color: rgb(111, 66, 193);
   font-weight: bold;
 }
 
@@ -74,11 +74,11 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
 
 .hljs-built_in,
 .hljs-builtin-name {
-  color: #0086b3;
+  color: rgb(0, 92, 197);
 }
 
 .hljs-meta {
-  color: #999;
+  color: #333;
   font-weight: bold;
 }
 
