cmd/frontend/internal/app: load bundle.js in base template (#6394)
To test this, write:

```
console.log("ui/assets/scripts/bundle.js runs on every web page!");
```

into `./ui/scripts/bundle.js`

(file can't be comitted because that dir is git ignored and should be auto-generated anyway)

--- a/cmd/frontend/internal/app/templates/ui2/shared/base.html
+++ b/cmd/frontend/internal/app/templates/ui2/shared/base.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>{{template "Title" .}} - Sourcegraph</title>
+	<script src="{{.AssetURL}}/scripts/bundle.js"></script>
 </head>
 <body>{{template "Body" .}}</body>
 </html>
