add slim web app ts boilerplate

--- a/cmd/frontend/internal/app/templates/ui2/shared/base.html
+++ b/cmd/frontend/internal/app/templates/ui2/shared/base.html
@@ -1,9 +1,12 @@
 <!doctype html>
 <html lang="en">
+
 <head>
 	<meta charset="utf-8">
 	<title>{{template "Title" .}} - Sourcegraph</title>
-	<script src="{{.AssetURL}}/scripts/bundle.js"></script>
+	<script src="{{.AssetURL}}/scripts/app.bundle.js"></script>
 </head>
+
 <body>{{template "Body" .}}</body>
+
 </html>
