cmd/frontend/internal/app: expose JSContext to all webapp pages; refactor common template data

--- a/cmd/frontend/internal/app/templates/ui2/shared/base.html
+++ b/cmd/frontend/internal/app/templates/ui2/shared/base.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<title>{{template "Title" .}} - Sourcegraph</title>
 	<script src="{{.AssetURL}}/scripts/app.bundle.js"></script>
+	<script>window.context = {{.Context}}</script>
 </head>
 
 <body>{{template "Body" .}}</body>
