cmd/frontend/internal/app: split blob view into table

--- a/cmd/frontend/internal/app/templates/ui2/blob.html
+++ b/cmd/frontend/internal/app/templates/ui2/blob.html
@@ -2,11 +2,9 @@
 
 {{define "Body"}}
 <div class="home-page">
-	<h1>Blob: {{.Path}}</h1>
-	<hr />
-	<pre>{{.Contents}}</pre>
-	<hr />
-	<p>Nothing to see here, <a href="/">go home</a></p>
+	<h1>Blob: {{.Repo.URI}} - {{.BlobView.Path}}</h1>
+	{{template "blobview.html" .BlobView}}
+	<p><a href="/">go home</a></p>
 </div>
 {{end}}
 
