--- a/cmd/frontend/internal/app/templates/ui2/error.html
+++ b/cmd/frontend/internal/app/templates/ui2/error.html
@@ -11,13 +11,13 @@
 	<title>{{.StatusCode}} {{.StatusText}} - Sourcegraph</title>
 </head>
 <body>
-	<div class="error-page">
+	<div class="error">
 		<h1>
 			<span class="status-code">{{.StatusCode}}</span>
 			<span class="status-text">{{.StatusText}}</span>
 		</h1>
 		{{if .Error}}
-			<pre class="error">{{.Error}}</pre>
+			<pre class="error-text">{{.Error}}</pre>
 		{{end}}
 		<hr />
 		<p>Sorry, there's been a problem. Please <a href="mailto:support@sourcegraph.com">contact us</a> and include the error ID: <strong>{{.ErrorID}}</strong></p>
