--- a/cmd/frontend/internal/app/templates/ui2/home.html
+++ b/cmd/frontend/internal/app/templates/ui2/home.html
@@ -1,7 +1,7 @@
 {{define "Title"}}Home{{end}}
 
 {{define "Body"}}
-<div class="home-page">
+<div class="home">
 	<h1>WIP</h1>
 	<p>Please ignore this page for now and manually hack the repo into the URL :)</p>
 	<p>repo view: <a href="/github.com/gorilla/mux">/github.com/gorilla/mux</a></p>
