cmd/frontend/internal/app: fix padding around blob view

--- a/cmd/frontend/internal/app/templates/ui2/shared/blobview.html
+++ b/cmd/frontend/internal/app/templates/ui2/shared/blobview.html
@@ -2,7 +2,7 @@
 	<table>
 		{{range $lineNumber, $line := .Lines}}
 			<tr>
-				<td class="linenumber">{{add $lineNumber 1}}</td>
+				<td class="line-number">{{add $lineNumber 1}}</td>
 				<td class="code-cell" style="font-family: monospace; white-space: pre;">{{$line}}</td> 
 			</tr>
 		{{end}}
