webapp: use MenloRegular font for blob view

--- a/cmd/frontend/internal/app/web_modules/scss/app.scss
+++ b/cmd/frontend/internal/app/web_modules/scss/app.scss
@@ -120,6 +120,7 @@
 }
 
 .blobview {
+	font-family: MenloRegular;
 	>table {
 		margin-top: 1.3em;
 		margin-bottom: 1.3em;
@@ -139,6 +140,8 @@
 		}
 		.code-cell {
 			padding-left: 1em;
+			white-space: pre;
+			font-size: .75em;
 		}
 	}
 }
