--- a/cmd/frontend/internal/app/templates/ui2/shared/base.html
+++ b/cmd/frontend/internal/app/templates/ui2/shared/base.html
@@ -8,6 +8,7 @@
 	<script>
 		window.context = {{.Context }}
 	</script>
+	<link rel="stylesheet" href="{{.AssetURL}}/fonts/MenloRegular.css">
 	<link rel="stylesheet" href="{{.AssetURL}}/scripts/ui/assets/dist/style.bundle.css">
 	<script>
 		window.context = {{.Context }}
