--- a/cmd/frontend/internal/app/templates/ui2/shared/blobview.html
+++ b/cmd/frontend/internal/app/templates/ui2/shared/blobview.html
@@ -3,7 +3,7 @@
 		{{range $lineNumber, $line := .Lines}}
 			<tr>
 				<td class="line-number">{{add $lineNumber 1}}</td>
-				<td class="code-cell" style="font-family: monospace; white-space: pre;">{{$line}}</td> 
+				<td class="code-cell">{{$line}}</td> 
 			</tr>
 		{{end}}
 	</table>
