--- a/cmd/frontend/internal/app/templates/ui2/shared/base.html
+++ b/cmd/frontend/internal/app/templates/ui2/shared/base.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="{{.AssetURL}}/scripts/ui/assets/dist/style.bundle.css">
 	<script>
 		window.context = {{.Context }}
+		window.pageVars = {{.PageVars}}
 	</script>
 </head>
 
