webapp: breadcrumb implementation + URL fixes (#6423)
* webapp: correctly add rev to treeview URLs

* webapp: remove accidental double slash in URLs

* webapp: real breadcrumb implementation

* webapp: remove italics from code comments (following VS Code)

* ui/assets/fonts: update Menlo font (using https://transfonter.org/)

* webapp: fix Menlo font

--- a/cmd/frontend/internal/app/templates/ui2/blob.html
+++ b/cmd/frontend/internal/app/templates/ui2/blob.html
@@ -2,7 +2,7 @@
 
 {{define "Body"}}
 <div class="blob">
-	{{template "navbar.html"}}
+	{{template "navbar.html" .Navbar}}
 	{{template "blobview.html" .BlobView}}
 </div>
 {{end}}
