--- a/cmd/frontend/internal/app/templates/ui2/tree.html
+++ b/cmd/frontend/internal/app/templates/ui2/tree.html
@@ -2,7 +2,7 @@
 
 {{define "Body"}}
 <div class="tree">
-	{{template "navbar.html"}}
+	{{template "navbar.html" .Navbar}}
 	{{template "treeview.html" .TreeView}}
 </div>
 {{end}}
