webapp: fix line highlighting style
Before:

---
![image](https://user-images.githubusercontent.com/3173176/28593735-47d2178c-7142-11e7-8c55-428d4b3d750b.png)
---

After:

---
![image](https://user-images.githubusercontent.com/3173176/28594797-115e56a8-7146-11e7-90d4-c77fa8fa6386.png)
---

--- a/cmd/frontend/internal/app/web_modules/scss/app.scss
+++ b/cmd/frontend/internal/app/web_modules/scss/app.scss
@@ -142,7 +142,8 @@ $nav-height: 48px;
 		border-collapse: collapse;
 		.line-number, .code-cell {
 			padding: 0;
-			padding-top: .6em;
+			padding-top: .3em;
+			padding-bottom: .3em;
 
 			pre {
 				margin: 2px;
@@ -151,9 +152,9 @@ $nav-height: 48px;
 		.line-number {
 			text-align: right;
 			font-size: .75em;
+			padding-right: 1em;
 		}
 		.code-cell {
-			padding-left: 1em;
 			white-space: pre;
 			font-size: .75em;
 		}
