--- a/cmd/frontend/internal/app/web_modules/scss/app.scss
+++ b/cmd/frontend/internal/app/web_modules/scss/app.scss
@@ -140,7 +140,7 @@ $nav-height: 48px;
 	#blob-table>table {
 		margin-bottom: 1.3em;
 		border-collapse: collapse;
-		.line-number, .code-cell, .blame {
+		.line-number, .code-cell {
 			padding: 0;
 			padding-top: .3em;
 			padding-bottom: .3em;
@@ -158,13 +158,12 @@ $nav-height: 48px;
 			white-space: pre;
 			font-size: .75em;
 			height: 1.7em;
-		}
-		.code-cell.blame:after {
-			content: attr(blame-content);
-			color: #464d57;
-			padding-left: 4em;
-			display: inline-block;
-			width: 0;
+			>.blame {
+				color: #464d57;
+				padding-left: 4em;
+				display: inline-block;
+				width: 0;
+			}
 		}
 	}
 
