webapp: use flex layout for blob view + ref widget

--- a/cmd/frontend/internal/app/templates/ui2/shared/blobview.html
+++ b/cmd/frontend/internal/app/templates/ui2/shared/blobview.html
@@ -1,10 +1,13 @@
 <div class="blobview">
-	<table>
-		{{range $lineNumber, $line := .Lines}}
+	<div id="blob-table">
+		<table>
+			{{range $lineNumber, $line := .Lines}}
 			<tr>
 				<td class="line-number">{{add $lineNumber 1}}</td>
-				<td class="code-cell">{{$line}}</td> 
+				<td class="code-cell">{{$line}}</td>
 			</tr>
-		{{end}}
-	</table>
+			{{end}}
+		</table>
+	</div>
+	<div id="ref-widget" />
 </div>
