--- a/cmd/frontend/internal/app/web_modules/scss/app.scss
+++ b/cmd/frontend/internal/app/web_modules/scss/app.scss
@@ -1,4 +1,7 @@
 @import "libs/highlight";
+
+$nav-height: 48px;
+
 /*
 	Styles for Go HTML template files only; all React code should use inline
 	style tags.
@@ -24,7 +27,7 @@
 
 	.header {
 		background-color: rgb(35, 48, 67);
-		height: 48px;
+		height: $nav-height;
 
 		>a {
 			outline: 0;
@@ -38,7 +41,7 @@
 			margin-top: 12px;
 
 			background-origin: content-box;
-			background: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 124 127'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cpath fill='%23F96316' d='M35.942 16.276L63.528 117.12c1.854 6.777 8.85 10.768 15.623 8.912 6.778-1.856 10.765-8.854 8.91-15.63L60.47 9.555C58.615 2.78 51.62-1.212 44.847.645c-6.772 1.853-10.76 8.853-8.905 15.63z'/%3E%3Cpath fill='%23B200F8' d='M87.024 15.894L17.944 93.9c-4.66 5.26-4.173 13.303 1.082 17.964 5.255 4.66 13.29 4.174 17.95-1.084l69.08-78.005c4.66-5.26 4.173-13.3-1.082-17.962-5.257-4.664-13.294-4.177-17.95 1.08z'/%3E%3Cpath fill='%2300B4F2' d='M8.75 59.12l98.516 32.595c6.667 2.205 13.86-1.414 16.065-8.087 2.21-6.672-1.41-13.868-8.08-16.076L16.738 34.96c-6.67-2.207-13.86 1.412-16.066 8.085-2.204 6.672 1.416 13.87 8.08 16.075z'/%3E%3C/g%3E%3C/svg%3E") 50% no-repeat;		
+			background: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 124 127'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cpath fill='%23F96316' d='M35.942 16.276L63.528 117.12c1.854 6.777 8.85 10.768 15.623 8.912 6.778-1.856 10.765-8.854 8.91-15.63L60.47 9.555C58.615 2.78 51.62-1.212 44.847.645c-6.772 1.853-10.76 8.853-8.905 15.63z'/%3E%3Cpath fill='%23B200F8' d='M87.024 15.894L17.944 93.9c-4.66 5.26-4.173 13.303 1.082 17.964 5.255 4.66 13.29 4.174 17.95-1.084l69.08-78.005c4.66-5.26 4.173-13.3-1.082-17.962-5.257-4.664-13.294-4.177-17.95 1.08z'/%3E%3Cpath fill='%2300B4F2' d='M8.75 59.12l98.516 32.595c6.667 2.205 13.86-1.414 16.065-8.087 2.21-6.672-1.41-13.868-8.08-16.076L16.738 34.96c-6.67-2.207-13.86 1.412-16.066 8.085-2.204 6.672 1.416 13.87 8.08 16.075z'/%3E%3C/g%3E%3C/svg%3E") 50% no-repeat;
 		}
 
 		.search {
@@ -120,11 +123,22 @@
 }
 
 .blobview {
+	$blob-height: unquote("calc(100vh - #{$nav-height} - #{$nav-height})");
+
 	font-family: 'Menlo';
-	>table {
-		margin-top: 1.3em;
+	display: flex;
+	flex-direction: column;
+	height: $blob-height;
+	width: 100%;
+
+	#blob-table {
+		position: relative;
+		flex: 2;
+		overflow: auto;
+	}
+
+	#blob-table>table {
 		margin-bottom: 1.3em;
-		width: 100%;
 		border-collapse: collapse;
 		.line-number, .code-cell {
 			padding: 0;
@@ -144,6 +158,11 @@
 			font-size: .75em;
 		}
 	}
+
+	#ref-widget {
+		flex: 1;
+	}
+
 }
 
 .treeview {
@@ -162,6 +181,8 @@
 	font-size: .75em;
 	height: 48px;
 	border-bottom: 1px solid #233043;
+	display: flex;
+	align-items: center;
 
 	a, a.navigation, .path a {
 		text-decoration: none;
@@ -169,28 +190,35 @@
 	}
 
 	.navigation {
+		display: flex;
+		align-items: center;
+		margin-right: 30px;
+
 		.group-icon {
-			margin-top: 19.5px;
-			margin-left: 19.5px;
-			margin-right: 9px;
+			margin: 0px 10px;
 			width: 9px;
 			height: 9px;
 		}
 
-		margin-right: 15px;
-		position: relative;
-		top: -2px;
 	}
 	.path {
+		flex: 1;
+		display: flex;
+		align-items: center;
+
 		.book-icon {
 			width: 10px;
 			height: 12px;
-			margin-right: 5px;
+			margin-right: 10px;
+		}
+
+		.book-link {
+			/* TODO(john): use uniform SVG asset box-sizing */
+			display: flex;
+			align-items: center;
 		}
 
 		>span {
-			position: relative;
-			top: -2px;
 			>a:last-child {
 				@extend .font-heavy-white;
 			}
@@ -199,9 +227,6 @@
 
 	.right-pane {
 		display: inline-block;
-		height: 100%;
-		float: right;
-		margin-top: 13px;
 		.share {
 			.share-icon {
 				width: 9px;
@@ -235,15 +260,15 @@
 }
 
 .blob {
-	
+
 }
 
 .error {
-	
+
 }
 
 .home {
-	
+
 }
 
 .repo {
