--- a/cmd/frontend/internal/app/templates/ui2/shared/base.html
+++ b/cmd/frontend/internal/app/templates/ui2/shared/base.html
@@ -38,8 +38,10 @@
 		addEventListener("DOMContentLoaded", function () {
 			var codeCells = document.querySelectorAll(".code-cell");
 			var worker = new Worker("{{.AssetURL}}/scripts/highlighter.bundle.js");
+			var finished = 0;
 			worker.onmessage = function (event) {
-				if (event.data.index == codeCells.length-1) {
+				finished++;
+				if (finished == codeCells.length-1) {
 					window.dispatchEvent(finishEvent);
 				}
 				codeCells[event.data.index].innerHTML = event.data.innerHtml;
