--- a/cmd/frontend/internal/app/web_modules/scss/app.scss
+++ b/cmd/frontend/internal/app/web_modules/scss/app.scss
@@ -143,6 +143,10 @@ $nav-height: 48px;
 		padding-right: 1em;
 		padding-top: 2em;
 		padding-bottom: 2em;
+
+		table {
+			width: 100%;
+		}
 	}
 
 	#blob-table>table {
