webapp: bump bundle version

--- a/cmd/frontend/internal/app/templates/ui2/shared/base.html
+++ b/cmd/frontend/internal/app/templates/ui2/shared/base.html
@@ -29,7 +29,7 @@
 			</span>
 		{{end}}
 	</div>
-	<script src="{{.AssetURL}}/scripts/app.bundle.js"></script>
+	<script src="{{.AssetURL}}/scripts/app.bundle.js?v2"></script>
 	{{template "Body" .}}
 	<script>
 		// Create an event (works with modern IE) that we will use to signal
