webapp: bump style.bundle.css version

--- a/cmd/frontend/internal/app/templates/ui2/shared/base.html
+++ b/cmd/frontend/internal/app/templates/ui2/shared/base.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<title>{{template "Title" .}} - Sourcegraph</title>
 	<link rel="stylesheet" href="{{.AssetURL}}/fonts/MenloRegular.css">
-	<link rel="stylesheet" href="{{.AssetURL}}/scripts/ui/assets/dist/style.bundle.css">
+	<link rel="stylesheet" href="{{.AssetURL}}/scripts/ui/assets/dist/style.bundle.css?v2">
 	<script>
 		window.context = {{.Context}}
 		window.pageVars = {{.PageVars}}
