--- a/cmd/frontend/internal/app/web_modules/scss/app.scss
+++ b/cmd/frontend/internal/app/web_modules/scss/app.scss
@@ -152,6 +152,11 @@ $nav-height: 48px;
 		}
 	}
 
+	#blob {
+		white-space: pre;
+		display: none;
+	}
+
 	#blob-table>table {
 		margin-bottom: 1.3em;
 		border-collapse: collapse;
