--- a/cmd/frontend/internal/app/web_modules/scss/app.scss
+++ b/cmd/frontend/internal/app/web_modules/scss/app.scss
@@ -25,32 +25,48 @@ $nav-height: 48px;
 		}
 	}
 
+	.spin:hover {	animation: spin 0.5s ease-in-out 1; }
+
+	@keyframes spin {
+		50% { transform: rotate(180deg) scale(1.2) }
+		100% { transform: rotate(180deg) scale(1) }
+	}
+
 	.header {
 		background-color: rgb(35, 48, 67);
 		height: $nav-height;
+		display: flex;
+		align-items: center;
 
 		>a {
 			outline: 0;
+			margin: 0px 16px;
 		}
-		.logo {
-			display: inline-block;
-			float: left;
-			width: 24px;
-			height: 24px;
-			margin-left: .75em;
-			margin-top: .75em;
 
-			background-origin: content-box;
-			background: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 124 127'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cpath fill='%23F96316' d='M35.942 16.276L63.528 117.12c1.854 6.777 8.85 10.768 15.623 8.912 6.778-1.856 10.765-8.854 8.91-15.63L60.47 9.555C58.615 2.78 51.62-1.212 44.847.645c-6.772 1.853-10.76 8.853-8.905 15.63z'/%3E%3Cpath fill='%23B200F8' d='M87.024 15.894L17.944 93.9c-4.66 5.26-4.173 13.303 1.082 17.964 5.255 4.66 13.29 4.174 17.95-1.084l69.08-78.005c4.66-5.26 4.173-13.3-1.082-17.962-5.257-4.664-13.294-4.177-17.95 1.08z'/%3E%3Cpath fill='%2300B4F2' d='M8.75 59.12l98.516 32.595c6.667 2.205 13.86-1.414 16.065-8.087 2.21-6.672-1.41-13.868-8.08-16.076L16.738 34.96c-6.67-2.207-13.86 1.412-16.066 8.085-2.204 6.672 1.416 13.87 8.08 16.075z'/%3E%3C/g%3E%3C/svg%3E") 50% no-repeat;
+		.fill {
+			flex: 1;
+		}
+
+		.open-on-desktop {
+			background-color: #1098AD;
+			border-radius: 2px;
+			display: flex;
+			align-items: center;
+			color: #FFFFFF;
+			height: 32px;
+			padding: 8px 12px;
+			font-size: 12px;
+			margin-right: 16px;
+			text-decoration: none;
+
+			.icon {
+				margin-left: 8px;
+			}
 		}
 
 		.search {
-			display: inline-block;
-			float: left;
 			width: 248px;
 			height: 32px;
-			margin-top: .5em;
-			margin-left: 0.9375em;
 
 			background-color: #151D28;
 
