webapp: don't allow selecting line numbers or blame (fixes #6508)

--- a/cmd/frontend/internal/app/web_modules/scss/app.scss
+++ b/cmd/frontend/internal/app/web_modules/scss/app.scss
@@ -168,6 +168,10 @@ $nav-height: 48px;
 	width: 100%;
 
 	.line-number {
+		&::before {
+			// draw line number with css so it cannot be copied to clipboard
+			content: attr(data-line-number);
+		}
 		color: #31445E;
 	}
 
@@ -216,6 +220,9 @@ $nav-height: 48px;
 			font-size: .75em;
 			height: 1.7em;
 			>.blame {
+				&::before {
+					content: attr(data-blame);
+				}
 				color: #464d57;
 				padding-left: 4em;
 				display: inline-block;
