webapp: add file tree widget

--- a/cmd/frontend/internal/app/templates/ui2/shared/blobview.html
+++ b/cmd/frontend/internal/app/templates/ui2/shared/blobview.html
@@ -1,5 +1,8 @@
 <div class="blobview">
-	<div id="blob">{{.File}}</div>
-	<div id="blob-table"></div>
+	<div id="tree-blob-container">
+		<div id="tree-viewer"></div>
+		<div id="blob">{{.File}}</div>
+		<div id="blob-table"></div>
+	</div>
 	<div id="ref-widget" />
 </div>
