--- a/cmd/frontend/internal/app/templates/ui2/error.html
+++ b/cmd/frontend/internal/app/templates/ui2/error.html
@@ -1,8 +1,19 @@
 {{/*
-	This template does not use base.html since it relies on common data (the
-	repo, asset root, etc.) and we do not want our error template to rely on
-	various random things from Common in the future. It should be minimal so
-	that it renders properly even when the system is severely broken.
+	IMPORTANT! There are two error templates:
+
+	- error.html
+	- fancyerror.html
+
+	error.html is designed to be as minimal and reliable as possible. It does
+	not include ANY other templates, as they may require data that is not
+	present (e.g. *Common data, which may not exist if e.g. gitserver or other
+	relied upon servers are degraded). This template should render even when
+	the system is severely broken.
+
+	fancyerror.html is designed to be more user friendly, and we always try to
+	render it first. It uses data from *Common etc, and can include other
+	templates like base.html. In the event that it fails to render, error.html
+	is the fallback that is used.
 */}}
 <!doctype html>
 <html lang="en">
